# dmtx-scanread

./: .gitignore  Makefile.am  README  configure.ac
dmtxread/: dmtxread.c  dmtxread.h
module/: CMakeLists.txt  main.cpp
